fix position of images to allow scroll within modal while having image visible

--- a/media/css/firefox/firstrun/new-firstrun.less
+++ b/media/css/firefox/firstrun/new-firstrun.less
@@ -5,18 +5,13 @@
     .fira-sans-light;
 }
 
-body{
-    overflow: hidden;
-}
-
 img {
     width: 100%;
     height: auto;
     min-width: 100%;
     min-height: 100%;
-    overflow: hidden;
     margin: auto;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
